收藏按钮的添加

--- a/user/collection.html
+++ b/user/collection.html
@@ -167,7 +167,7 @@
                                 <a href="../resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a>
                                 <img src="../images/point.png">
                                 <span class="point_icon_font">20 &nbsp;&nbsp;</span>
-                                <a id="change-btn" onclick=""><i class="fa fa-star-o"></i></a>
+                                <a onclick=""><i class="fa fa-star-o"></i></a>
                             </h4>
                             <p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>
                         </div>
@@ -181,7 +181,10 @@
                 <div class="blog-left-grids">
                     <div class="blog-left-right_results">
                         <div class="blog-left-right-top">
-                            <h4><a href="../resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="../images/point.png"><span class="point_icon_font">20</span></h4>
+                            <h4><a href="../resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="../images/point.png">
+                                <span class="point_icon_font">20</span>
+                                <a onclick=""><i class="fa fa-star"></i></a>
+                            </h4>
                             <p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>
                         </div>
                         <div class="blog-left-right-bottom">
