--- a/user/collection.html
+++ b/user/collection.html
@@ -20,6 +20,11 @@
     <link href="http://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
     <!-- //font -->
+    <link href='../css/immersive-slider.css' rel='stylesheet' type='text/css'>
+    <!-- pricing -->
+    <link rel="stylesheet" href="../css/jquery.flipster.css">
+    <!-- //pricing -->
+    <link href="../css/results.css" rel="stylesheet" type="text/css">
     <script src="../js/jquery-1.11.1.min.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/SmoothScroll.min.js"></script>
@@ -34,10 +39,6 @@
             });
         });
     </script>
-    <link href='../css/immersive-slider.css' rel='stylesheet' type='text/css'>
-    <!-- pricing -->
-    <link rel="stylesheet" href="../css/jquery.flipster.css">
-    <!-- //pricing -->
 </head>
 <body>
 <!-- header-top -->
