--- a/professor.html
+++ b/professor.html
@@ -43,6 +43,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul>
                 <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登录</a></li>
                 <li id="registerButton"><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
+                <li id="changePassword" style="display: none"><a href="changepassword.html">&nbsp;&nbsp;&nbsp;&nbsp;修改密码</a></li>
+                <li id="logout" style="display: none"><a href="" onclick="logout()">&nbsp;&nbsp;&nbsp;&nbsp;注销</a></li>
             </ul>
         </div>
         <div class="agileinfo-social-grids">
@@ -260,24 +262,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="agile-footer-grids">
             <div class="col-md-4 agile-footer-grid">
-                <h4>History of <span>Hosting</span></h4>
-                <p>Pellentesque urna ex, ultricies a nunc at, pretium maximus nisi. Vestibulum non auctor diam. Mauris eget consectetur mauris. <span>Aenean leo elit, accumsan vel elit vitae, mattis ultricies lacus. Cras consectetur justo lorem, sed dictum sapien eleifend at.</span></p>
+                <h4><span>联系 </span>方式</h4>
+                <p>北京航空航天大学软件学院系统分析设计课菩提老组 <span>组长：冯翀</span><span>qq号：449106803</span></p>
             </div>
             <div class="col-md-4 agile-footer-grid">
-                <h4>Twitter <span>Posts</span></h4>
+                <h4><span>开源</span> 地址</h4>
                 <ul class="w3agile_footer_grid_list">
-                    <li>Ut aut reiciendis voluptatibus maiores <a href="#">http://example.com</a> alias, ut aut reiciendis.
-                        <span><i class="fa fa-twitter" aria-hidden="true"></i> 02 days ago</span></li>
-                    <li>Itaque earum rerum hic tenetur a sapiente delectus <a href="#">http://example.com</a> ut aut
-                        voluptatibus.<span><i class="fa fa-twitter" aria-hidden="true"></i> 03 days ago</span></li>
+                    <li>你们可以在<a href="#"> https://github.com/MasterPuTi </a>上找到我们的前端项目
+                    <li>你们可以在<a href="#"> https://www.showdoc.cc/web/#/85630238481628?page_id=488673402152275 </a> 查看我们的后端api文档
                 </ul>
             </div>
             <div class="col-md-4 agile-footer-grid">
-                <h4>Popular <span>Posts</span></h4>
+                <h4>热点 <span>话题</span></h4>
                 <div class="popular-grids">
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/page1.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/page2.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/10.jpg" alt=""></a>
+                    </div>
                     <div class="popular-grid">
                         <a href="#"><img src="images/6.jpg" alt=""></a>
                     </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="popular-grids" style="padding-top: 10px">
                     <div class="popular-grid">
                         <a href="#"><img src="images/7.jpg" alt=""></a>
                     </div>
@@ -287,35 +299,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="popular-grid">
                         <a href="#"><img src="images/9.jpg" alt=""></a>
                     </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="popular-grids agileits-小贝壳网站模板-popular">
                     <div class="popular-grid">
-                        <a href="#"><img src="images/10.jpg" alt=""></a>
-                    </div>
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/4.jpg" alt=""></a>
-                    </div>
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/6.jpg" alt=""></a>
-                    </div>
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/7.jpg" alt=""></a>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="popular-grids">
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/8.jpg" alt=""></a>
-                    </div>
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/9.jpg" alt=""></a>
-                    </div>
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/10.jpg" alt=""></a>
-                    </div>
-                    <div class="popular-grid">
-                        <a href="#"><img src="images/4.jpg" alt=""></a>
+                        <a href="#"><img src="images/page3.jpg" alt=""></a>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -324,7 +309,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
     <div class="copyright">
-        <p>© 2016 Hosting City. All rights reserved | Design by <a href="http://www.smallseashell.com">.小贝壳网站模板.</a></p>
+        <p>© 2018 Essay Search. Design by <a href="https://github.com/MasterPuTi">.菩提老组.</a></p>
     </div>
 </div>
 <!-- //footer -->
