--- a/user/pointchangerecord.html
+++ b/user/pointchangerecord.html
@@ -145,6 +145,9 @@
                     <a href="collection.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">我的收藏</button></a>
                 </li>
                 <li style="list-style: none">
+                    <a href="purchaserecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">购买记录</button></a>
+                </li>
+                <li style="list-style: none">
                     <a href="browserecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">浏览记录</button></a>
                 </li>
                 <li style="list-style: none">
