添加了静态充值页面

--- a/user/collection.html
+++ b/user/collection.html
@@ -154,6 +154,9 @@
                 <li style="list-style: none">
                     <a href="pointchangerecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">积分记录</button></a>
                 </li>
+                <li style="list-style: none">
+                    <a href="recharge.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">相关充值</button></a>
+                </li>
             </ul>
         </aside>
     </div>
