--- a/user/recharge.html
+++ b/user/recharge.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>用户信息</title>
+    <title>用户充值</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="" />
@@ -24,13 +23,11 @@
     <script src="../js/bootstrap.js"></script>
     <script src="../js/SmoothScroll.min.js"></script>
     <script src="../js/checkIfLogin.js"></script>
-    <!--userinfo.js引入-->
-    <script src="../js/user-js/userinfo.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event){
                 event.preventDefault();
-                $('html,body').animate({scrollTop: $(this.hash).offset().top}, 1000);
+                $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
             });
         });
     </script>
@@ -40,6 +37,7 @@
     <!-- //pricing -->
 </head>
 <body>
+
 <!-- header-top -->
 <div class="header-top">
     <div class="container">
@@ -162,30 +160,175 @@
 
     <div style="width: 70%;">
         <div class="modal-header">
-            <h2 style="">个人信息&nbsp;&nbsp;&nbsp;&nbsp;<a id="change-btn" onclick="showChangeForm()"><i class="glyphicon glyphicon-pencil"></i></a></h2>
+            <h2 style="">相关充值&nbsp;&nbsp;&nbsp;&nbsp;</h2>
         </div>
         <div class="modal-body">
-            <!--点击修改按钮后下面html出现-->
-            <div id="userinfo-change"  class="col-md-6 contact-form-right" style="display: none">
-                    <div class="input-group input-group-lg wow fadeInUp animated" data-wow-delay=".5s">
-                        <span class="input-group-addon">用户名称</span>
-                        <input id="input-name" type="text" class="form-control" aria-describedby="sizing-addon1" autofocus="autofocus">
+            <!-- special -->
+            <div class="special">
+                <div class="container">
+                    <div class="w3-banner-bottom-heading">
+                        <h3>Special Introductory <span>Offers</span></h3>
                     </div>
-                    <button id="submit-change" class="btn1" onclick="submitChangeInfo()">提交</button>
-                    <button id="cancel-change" class="btn1" onclick="cancelChange()">取消</button>
+                    <div class="wthree-special-grid">
+                        <div class="flipster">
+                            <ul>
+                                <li>
+                                    <div class="pricing">
+                                        <div class="pricing-top green-top">
+                                            <h3>个人</h3>
+                                            <p>￥50</p>
+                                        </div>
+                                        <div class="pricing-bottom">
+                                            <div class="pricing-bottom-top">
+                                                <p>基础50积分点</p>
+                                                <p>每天1点积分</p>
+                                                <p>额外赠送20积分</p>
+                                            </div>
+                                            <div class="pricing-bottom-bottom">
+                                                <p><span>绑定银行卡</span> 自动续费</p>
+                                            </div>
+                                            <div class="buy-button">
+                                                <a>充值</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="pricing">
+                                        <div class="pricing-top blue-top">
+                                            <h3>个人</h3>
+                                            <p>￥70</p>
+                                        </div>
+                                        <div class="pricing-bottom">
+                                            <div class="pricing-bottom-top">
+                                                <p>基础70积分点</p>
+                                                <p>每天2点积分</p>
+                                                <p>额外赠送30积分</p>
+                                            </div>
+                                            <div class="pricing-bottom-bottom">
+                                                <p><span>绑定银行卡</span> 自动续费</p>
+                                            </div>
+                                            <div class="buy-button">
+                                                <a>充值</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="pricing">
+                                        <div class="pricing-top">
+                                            <h3>家庭</h3>
+                                            <p>￥270</p>
+                                        </div>
+                                        <div class="pricing-bottom">
+                                            <div class="pricing-bottom-top">
+                                                <p>每人基础50积分点</p>
+                                                <p>每天1点积分</p>
+                                                <p>额外赠送20积分</p>
+                                            </div>
+                                            <div class="pricing-bottom-bottom">
+                                                <p><span>绑定银行卡</span> 自动续费</p>
+                                            </div>
+                                            <div class="buy-button">
+                                                <a>充值</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="pricing">
+                                        <div class="pricing-top green-top">
+                                            <h3>专家</h3>
+                                            <p>￥720</p>
+                                        </div>
+                                        <div class="pricing-bottom">
+                                            <div class="pricing-bottom-top">
+                                                <p>基础720积分点</p>
+                                                <p>每天10点积分</p>
+                                                <p>每天3篇免费论文</p>
+                                            </div>
+                                            <div class="pricing-bottom-bottom">
+                                                <p><span>绑定银行卡</span> 自动续费</p>
+                                            </div>
+                                            <div class="buy-button">
+                                                <a>充值</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="pricing">
+                                        <div class="pricing-top">
+                                            <h3>专家</h3>
+                                            <p>￥120</p>
+                                        </div>
+                                        <div class="pricing-bottom">
+                                            <div class="pricing-bottom-top">
+                                                <p>基础120积分点</p>
+                                                <p>每天1点积分</p>
+                                                <p>每天1篇免费论文</p>
+                                            </div>
+                                            <div class="pricing-bottom-bottom">
+                                                <p><span>绑定银行卡</span> 自动续费</p>
+                                            </div>
+                                            <div class="buy-button">
+                                                <a>充值</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div id="userinfo-content" class="agileits-contact-address" style="margin-top: 1rem">
-                <ul>
-                    <li><i class="fa fa-user" aria-hidden="true"></i><span id="username" style="font-size: 2rem">undefined</span></li>
-                    <!--<li><i class="fa fa-envelope" aria-hidden="true"></i><span>13121273185@163.com</span></li>-->
-                    <li><i class="fa fa-money" aria-hidden="true"></i><span id="user-point" style="font-size: 2rem">undefined</span></li>
-                    <li><i class="fa  fa-credit-card" aria-hidden="true"></i><span id="user-credit" style="font-size: 2rem">undefined</span></li>
-                </ul>
-            </div>
+            <!-- //special -->
         </div>
     </div>
 </div>
 
+
+<script src="../js/jarallax.js"></script>
+<script type="text/javascript">
+    /* init Jarallax */
+    $('.jarallax').jarallax({
+        speed: 0.5,
+        imgWidth: 1366,
+        imgHeight: 768
+    })
+</script>
+<script src="../js/responsiveslides.min.js"></script>
+<script type="text/javascript" src="../js/move-top.js"></script>
+<script type="text/javascript" src="../js/easing.js"></script>
+<!-- here stars scrolling icon -->
+<script type="text/javascript">
+    $(document).ready(function() {
+        /*
+            var defaults = {
+            containerID: 'toTop', // fading element id
+            containerHoverID: 'toTopHover', // fading element hover id
+            scrollSpeed: 1200,
+            easingType: 'linear'
+            };
+        */
+
+        $().UItoTop({ easingType: 'easeOutQuart' });
+
+    });
+</script>
+<!-- //here ends scrolling icon -->
+<!-- pricing -->
+<script src="../js/jquery.flipster.js"></script>
+<script>
+    <!--
+
+    $(function(){ $(".flipster").flipster({ style: 'carousel', start: 0 }); });
+
+    -->
+</script>
+<!-- //pricing -->
+<!-- slider -->
+<script type="text/javascript" src="../js/jquery.immersive-slider.js"></script>
+<!-- //slider -->
 </body>
 </html>
