学科展示页面

--- a/subject.html
+++ b/subject.html
@@ -25,6 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/bootstrap.js"></script>
     <script src="js/SmoothScroll.min.js"></script>
     <script src="js/checkIfLogin.js"></script>
+    <script src="js/subject.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event){
@@ -103,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //header -->
 <!-- about-heading -->
 <div class="about-heading">
-    <h2>Our <span>Plans</span></h2>
+    <h2>The <span>Subject</span></h2>
 </div>
 <!-- //about-heading -->
 <!-- plans -->
@@ -111,13 +112,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="shared-grid">
     <div class="container">
         <div class="w3-banner-bottom-heading">
-            <h3>Shared <span>Hosting</span></h3>
+            <h3 id="subjectinfo_name">Subject Name</h3>
         </div>
         <div class="priceing-table-main">
             <div class="col-md-3 price-grid">
                 <div class="price-block agile">
                     <div class="price-gd-top pric-clr1">
-                        <h4>Basic</h4>
+                        <h4>领域专家</h4>
                         <h3>$5</h3>
                         <h5>1 month</h5>
                     </div>
@@ -140,7 +141,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 price-grid">
                 <div class="price-block agile">
                     <div class="price-gd-top pric-clr2">
-                        <h4>Standard</h4>
+                        <h4>领域热度</h4>
                         <h3>$10</h3>
                         <h5>5 months</h5>
                     </div>
@@ -163,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 price-grid">
                 <div class="price-block agile">
                     <div class="price-gd-top pric-clr3">
-                        <h4>Premium</h4>
+                        <h4>领域论文</h4>
                         <h3>$20</h3>
                         <h5>Free for 2 months</h5>
                     </div>
@@ -186,7 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 price-grid wthree">
                 <div class="price-block agile">
                     <div class="price-gd-top pric-clr4">
-                        <h4>Ultimate</h4>
+                        <h4>领域专利</h4>
                         <h3>$50</h3>
                         <h5>Free for 5 months</h5>
                     </div>
