犀利的一波操作，添加导航栏跳转功能

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/SmoothScroll.min.js"></script>
 <script src="js/checkIfLogin.js"></script>
+    <script src="js/results.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){		
@@ -82,9 +83,9 @@
 					<nav>
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="index.html">主页</a></li>
-							<li><a href="results.html" class="hvr-sweep-to-bottom">论文</a></li>
-							<li><a href="professor.html" class="hvr-sweep-to-bottom">专家</a></li>
-							<li><a href="subject.html" class="hvr-sweep-to-bottom">学科</a></li>
+							<li><a href="index.html#searchBox" class="hvr-sweep-to-bottom" onclick="indexJump('keyword')">论文</a></li>
+							<li><a href="index.html#searchBox" class="hvr-sweep-to-bottom" onclick="indexJump('author')">专家</a></li>
+							<li><a href="index.html#searchBox" class="hvr-sweep-to-bottom" onclick="indexJump('subject')">学科</a></li>
 							<li><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">其他界面<span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a class="hvr-sweep-to-bottom" href="services.html">Services</a></li>
@@ -154,7 +155,7 @@
 
 	</script>
 	<!-- //banner -->
-	<div class="domain">
+	<div class="domain" id="searchBox">
 		<div class="container">
 			<form class="search-form domain-search" action="results.html" method="get">
 				<div class="two-fifth column first">
