专家门户界面改动（犀利操作）

--- a/professor.html
+++ b/professor.html
@@ -126,7 +126,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="w3-banner-bottom-heading about-choose">
                 <h3 id="professorName">专家姓名  </h3>
-                <h3 id="professorID"><span>                                ID</span></h3>
+                <!--<p id="professorID">ID</p>-->
             </div>
             <div class="agile-choose-grids">
                 <div class="col-sm-4 agile-choose-grid">
@@ -237,14 +237,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div id="proFuc3">
                 <h3>查看<span>历史申诉</span></h3>
-                <div>
-                    <p id="appealID"></p>
-                    <p id="applicant"></p>
-                    <p id="applicationTime"></p>
-                    <p id="applicationContent"></p>
-                    <p id="handleStatus"></p>
-                    <p id="resultContent"></p>
-                </div><br/>
+                <div id="appealContainer"></div><br/>
             </div>
             <!--<div id="proFuc4">-->
                 <!--<h3>修改积分<span>分配比例</span></h3>-->
