学科展示页面

--- a/resultpage.html
+++ b/resultpage.html
@@ -120,11 +120,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <!--<a href="resultpage.html"><img src="images/2a.jpg" alt="" /></a>-->
                     <!--</div>-->
                     <div class="blog-left-grids">
-                        <div class="blog-left-left">
-                            <div class="margin-top" id="result_purchase">
-                                <span class="address-title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Purchase</span>
-                            </div>
-                        </div>
+                        <!--<div class="blog-left-left">-->
+                            <!--<div class="margin-top" id="result_purchase">-->
+                        <button type="submit" class="blog-left-left" id="result_purchase"><p>Purchase</p><p></p><p></p></button>
+                            <!--</div>-->
+                        <!--</div>-->
                         <div class="blog-left-right">
                             <div class="blog-left-right-top">
                                 <h4 id="result_name">成果名称</h4>
@@ -211,21 +211,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>
                         <li><a href="#">Cum sociis natoque penatibus et magnis</a></li>
                         <li><a href="#">Suspendisse nec magna id ex pretium</a></li>
-                    </ul>
-                </div>
-                <div class="categories">
-                    <h3>收藏记录</h3>
-                    <ul class="marked-list offs1" id="">
-                        <li><a href="#">May 2016 (7)</a></li>
-                        <li><a href="#">April 2016 (11)</a></li>
-                        <li><a href="#">March 2016 (12)</a></li>
-                        <li><a href="#">February 2016 (14)</a> </li>
-                        <li><a href="#">January 2016 (10)</a></li>
-                        <li><a href="#">December 2016 (12)</a></li>
-                        <li><a href="#">November 2016 (8)</a></li>
-                        <li><a href="#">October 2016 (7)</a> </li>
-                        <li><a href="#">September 2016 (8)</a></li>
-                        <li><a href="#">August 2016 (6)</a></li>
                     </ul>
                 </div>
             </div>
