--- a/user/userinfo.html
+++ b/user/userinfo.html
@@ -160,9 +160,13 @@
         </aside>
     </div>
 
-    <div style="width: 70%;">
+    <div style="width: 70%;margin-bottom: 5rem">
         <div class="modal-header">
-            <h2 style="">个人信息&nbsp;&nbsp;&nbsp;&nbsp;<a id="change-btn" onclick="showChangeForm()"><i class="glyphicon glyphicon-pencil"></i></a></h2>
+            <h2>个人信息&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a id="change-btn" onclick="showChangeForm()">
+                        <i class="glyphicon glyphicon-pencil"></i>
+                    </a>
+            </h2>
         </div>
         <div class="modal-body">
             <!--点击修改按钮后下面html出现-->
@@ -178,10 +182,16 @@
             <div id="userinfo-content" class="agileits-contact-address" style="margin-top: 1rem">
                 <ul>
                     <li><i class="fa fa-user" aria-hidden="true"></i><span id="username" style="font-size: 2rem">undefined</span></li>
-                    <!--<li><i class="fa fa-envelope" aria-hidden="true"></i><span>13121273185@163.com</span></li>-->
                     <li><i class="fa fa-money" aria-hidden="true"></i><span id="user-point" style="font-size: 2rem">undefined</span></li>
                     <li><i class="fa  fa-credit-card" aria-hidden="true"></i><span id="user-credit" style="font-size: 2rem">undefined</span></li>
                 </ul>
+                <div id="input-expertname" class="three-fifth column">
+                    <input type="text" class="text" name="searchInfo" placeholder="输入专家名称" required="">
+                </div>
+                <div id="authentication" class="one-fifth column">
+                    <button class="btn1" onclick="authentication()">认证</button>
+                </div>
+                <!--<button class="btn1" id="manage-expert-btn">管理专家门户<span></span></button>-->
             </div>
         </div>
     </div>
