学科展示页面

--- a/resultpage.html
+++ b/resultpage.html
@@ -161,7 +161,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <h5><a href="#">Alexender Macksve</a></h5>
                                     </div>
                                     <div class="media-body response-text-right">
-                                        <p>毫无意义的论文，我的智障侄子3小时就能写出一篇。</p>
+                                        <p>毫无意义的论文，我的侄子3小时就能写出一篇。</p>
                                         <ul>
                                             <li>June 21, 2016</li>
                                             <li><a href="resultpage.html">Reply</a></li>
@@ -203,7 +203,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-4 agile-blog-grid-right">
                 <div class="categories">
-                    <h3>浏览记录</h3>
+                    <h3 id="browserecord-container">浏览记录</h3>
                     <ul>
                         <li><a href="#">Phasellus sem leo, interdum quis risus</a></li>
                         <li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>
