学科展示页面

--- a/resultpage.html
+++ b/resultpage.html
@@ -203,15 +203,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-4 agile-blog-grid-right">
                 <div class="categories">
-                    <h3 id="browserecord-container">浏览记录</h3>
-                    <ul>
-                        <li><a href="#">Phasellus sem leo, interdum quis risus</a></li>
-                        <li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>
-                        <li><a href="#"> Donec condimentum purus urna venenatis</a></li>
-                        <li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>
-                        <li><a href="#">Cum sociis natoque penatibus et magnis</a></li>
-                        <li><a href="#">Suspendisse nec magna id ex pretium</a></li>
-                    </ul>
+                    <h3>浏览记录</h3>
+                    <!--<ul>-->
+                        <!--<li><a href="#">Phasellus sem leo, interdum quis risus</a></li>-->
+                        <!--<li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>-->
+                        <!--<li><a href="#"> Donec condimentum purus urna venenatis</a></li>-->
+                        <!--<li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>-->
+                        <!--<li><a href="#">Cum sociis natoque penatibus et magnis</a></li>-->
+                        <!--<li><a href="#">Suspendisse nec magna id ex pretium</a></li>-->
+                    <!--</ul>-->
+                    <div id="browserecord-container" class="modal-body">
+                        <div class="bs-docs-example wow fadeInUp animated" data-wow-delay=".5s">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>成果名</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="clearfix"> </div>
