购买按钮的改变

--- a/resultpage.html
+++ b/resultpage.html
@@ -122,7 +122,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="blog-left-grids">
                         <!--<div class="blog-left-left">-->
                             <!--<div class="margin-top" id="result_purchase">-->
-                        <button type="submit" class="blog-left-left" id="result_purchase"><p>Purchase</p><p></p><p></p></button>
+                        <!--&lt;!&ndash;<button onclick="purchase()" class="blog-left-left" id="result_purchase"><p>Purchase</p><p></p><p></p></button>&ndash;&gt;-->
                             <!--</div>-->
                         <!--</div>-->
                         <div class="blog-left-right">
